--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,25 @@
 body{
     background: white;
 }
+
+.card {
+    font-size: 60px;
+    width: 150px;
+    height: 200px;
+    margin: 0 auto;
+    border: 2px solid black;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    box-shadow: 2px 4px 12px;
+}
+
+.heart, .diamond {
+    color:red
+}
+
+.spade, .club {
+    color: black;
+}
